SW-9300 - Fix scrollbar not showing on ipad

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/modal.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/modal.less
@@ -44,6 +44,7 @@
         height: 100%;
         position: relative;
         overflow: auto;
+        -webkit-overflow-scrolling: touch;
 
         .content--iframe {
             .unitize-padding(10, 10, 10, 10);
